핀란드 동거 변수 클리닝 오류 수정

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,16 +503,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "fin$MARITAL <- ifelse(fin$MARITAL == 1, \"cohabit\", fin$MARITAL)\n",
     "fin$MARITAL <- ifelse(fin$MARITAL == 2, \"non-cohabit\", fin$MARITAL)\n",
-    "fin$MARITAL <- ifelse(fin$MARITAL == 3, \"non-cohabit\", fin$MARITAL)\n",
-    "fin$MARITAL <- ifelse(fin$MARITAL == 4, \"non-cohabit\", fin$MARITAL)\n",
-    "fin$MARITAL <- ifelse(fin$MARITAL == 5, \"single\", fin$MARITAL)\n",
-    "fin$MARITAL <- ifelse(fin$MARITAL == 6, \"cohabit\", fin$MARITAL)"
+    "fin$MARITAL <- ifelse(fin$MARITAL == 3, \"single\", fin$MARITAL)"
    ]
   },
   {
@@ -531,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -708,8 +705,8 @@
       "text/plain": [
        "     SEX           AGE               MARITAL        INCOME       TRTWHY1\n",
        " female:280   Min.   :15.00   cohabit    :456   Min.   : 2.303   N:474  \n",
-       " male  :245   1st Qu.:35.00   non-cohabit: 69   1st Qu.: 8.006   Y: 51  \n",
-       "              Median :48.00                     Median : 8.412          \n",
+       " male  :245   1st Qu.:35.00   non-cohabit: 13   1st Qu.: 8.006   Y: 51  \n",
+       "              Median :48.00   single     : 56   Median : 8.412          \n",
        "              Mean   :46.73                     Mean   : 8.386          \n",
        "              3rd Qu.:60.00                     3rd Qu.: 8.700          \n",
        "              Max.   :75.00                     Max.   :11.736          \n",
@@ -739,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
